Fix crash when using a color scheme with random colors

A new assert in GCC 11.1.0 std::piecewise_linear_distribution fails in
the case that the lower and upper boundaries are equal.  So, make sure
to not construct a std::piecewise_linear_distribution when minSaturation
equals maxSaturation and when minLightness equals maxLightness.

BUG: 434892
(cherry picked from commit 8c24953bdefc28fa7f1db1d0b77f855f3c1ec952)